<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <com.google.android.material.chip.ChipGroup
            app:chipSpacingHorizontal="6dp"
            app:singleSelection="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

        <com.google.android.material.chip.Chip
                android:id="@+id/checkerGreen"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                app:chipBackgroundColor="@color/selector_chip_green"
                android:checked="true"
                app:checkedIcon="@drawable/ic_action_check"
                android:text="@string/text_green"
                app:checkedIconVisible="true"
                android:textColor="@color/white"
                app:chipIconTint="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        <com.google.android.material.chip.Chip
                android:id="@+id/checkerBlue"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                app:chipBackgroundColor="@color/selector_chip_blue"
                android:checked="true"
                app:checkedIcon="@drawable/ic_action_check"
                android:text="@string/text_blue"
                app:checkedIconVisible="true"
                android:textColor="@color/white"
                app:chipIconTint="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        <com.google.android.material.chip.Chip
                android:id="@+id/checkerBlack"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                app:chipBackgroundColor="@color/selector_chip_black"
                android:checked="true"
                android:textColor="@color/white"
                app:chipIconTint="@color/white"
                app:checkedIconVisible="true"
                app:checkedIcon="@drawable/ic_action_check"
                android:text="@string/text_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        <com.google.android.material.chip.Chip
                android:id="@+id/checkerRed"
                app:chipBackgroundColor="@color/selector_chip_red"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:checked="true"
                app:checkedIcon="@drawable/ic_action_check"
                app:checkedIconVisible="true"
                android:textColor="@color/white"
                app:chipIconTint="@color/white"
                android:text="@string/text_red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
    </com.google.android.material.chip.ChipGroup>

    <View
            android:layout_marginTop="4dp"
            android:background="@color/dim_black"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="4dp"
            />

    <com.google.android.material.chip.ChipGroup
            app:chipSpacingHorizontal="6dp"
            app:singleSelection="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

        <com.google.android.material.chip.Chip
                android:id="@+id/checkerHero"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                app:chipBackgroundColor="@color/selector_chip_gold"
                android:checked="true"
                app:checkedIcon="@drawable/ic_action_check"
                android:text="@string/text_hero"
                app:checkedIconVisible="true"
                android:textColor="@color/white"
                app:chipIconTint="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        <com.google.android.material.chip.Chip
                android:id="@+id/checkerSpell"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                app:chipBackgroundColor="@color/selector_chip_gold"
                android:checked="true"
                app:checkedIcon="@drawable/ic_action_check"
                android:text="@string/text_spell"
                app:checkedIconVisible="true"
                android:textColor="@color/white"
                app:chipIconTint="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        <com.google.android.material.chip.Chip
                android:id="@+id/checkerImprovement"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                app:chipBackgroundColor="@color/selector_chip_gold"
                android:checked="true"
                android:textColor="@color/white"
                app:chipIconTint="@color/white"
                app:checkedIconVisible="true"
                app:checkedIcon="@drawable/ic_action_check"
                android:text="@string/text_improvement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        <com.google.android.material.chip.Chip
                android:id="@+id/checkerItem"
                app:chipBackgroundColor="@color/selector_chip_gold"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:checked="true"
                app:checkedIcon="@drawable/ic_action_check"
                app:checkedIconVisible="true"
                android:textColor="@color/white"
                app:chipIconTint="@color/white"
                android:text="@string/text_Item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        <com.google.android.material.chip.Chip
                android:id="@+id/checkerCreep"
                app:chipBackgroundColor="@color/selector_chip_gold"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:checked="true"
                app:checkedIcon="@drawable/ic_action_check"
                app:checkedIconVisible="true"
                android:textColor="@color/white"
                app:chipIconTint="@color/white"
                android:text="@string/text_creeps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
    </com.google.android.material.chip.ChipGroup>

</LinearLayout>